﻿WIP 2.3.6
DETAILED CHANGELOG:
+ Fixed ZoomControl dynamic content switch to corectly refresh viewfinder
+ Some class refactoring

RELEASE 2.3.5
FEATURES HIGHLIGHT:
 - Added new awesome vertex snapping feature on vertex drag. Many thanks to perturbare for this wonderful contibution! The feature is implemented around DragBehaviour class 
 and is represented in several new settings allowing the drag to be perform around some sort of virtual snap grid. Please read the comment for the DragBehaviour class for detailed info.
 - Added new feature & example preview in showcase app: graph data filtering. This feature allows you to filter the graph prior to layout generation or relayout based on the pipeline of 
 LogicCore::Filters that are processed sequentially. These filters can modify graph using custom logic. The output graph will be available for interaction along with the copy of the original 
 graph. User then may choose if he wish to revert graph to the original state or apply filtering results permanently.
 Please read the details at: http://panthernet.ru/forum/index.php/topic/346-235-graph-data-filtering-features/

DETAILED CHANGELOG:
 - Added Universal Windows Application support and example project
 - Added StateStorage::ImportState() method to allow state import/export logic between several graphs
 - Added GraphArea::IsDisposed property that indicated that GraphArea object has been disposed and shouldn't be used anymore
 - Added GraphArea::CreateNewStateStorage() protected method to be able to implement custom state storage logic for GraphArea
 - Added ParameterizedLayoutAlgorithmBase::EnsureUniqueRandomInitialPositions property that enables unique random positions generation for layout algorithms. False by default, True for LinLog algorithm.
 - Added VertexControl::VCPRoot property whcih represents the VCP root container for easier runtime VCP management. To be able to use it you have to define PART_vcproot template element as Panel descendant.