@@ -1,6 +1,13 @@
 ﻿WIP 2.3.6
 DETAILED CHANGELOG:
++ Added edge endpoint calculation for rotated vertex that use ellipse math shape
++ Added VertexControl::LabelAttached and LabelDetached events which fires when new label is attached to VertexControl or detached from it
++ Added new parameter to GraphArea::UpdateParallelEdgesData(Dictionary<TEdge, EdgeControl> edgeList) to be able to specify edges list to parse for parallelization instead of full edge list parse
++ Added support for object visbility and attachable labels to GraphX serialization data
 + Fixed ZoomControl dynamic content switch to corectly refresh viewfinder
++ Improved ZoomControl handling with disabled animation
++ Renamed ZoomControl::IsAnimationDisabled to IsAnimationEnabled and changed the logic according the modification
++ Renamed ZoomControl::MaximumZoomStep to ZoomStep and updated description
 + Some class refactoring
 
 RELEASE 2.3.5
